# corsar-wallet

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  go.mod  main.py  mypy.ini  pyproject.toml  settings.py
.github/workflows/: ci.yaml  merge_main_ci.yaml  push_ci.yaml
alembic/: env.py
alembic/versions/: 7a500ee114b2_added_name_for_wallet.py  c34b09cf1243_added_category_tables.py  cffa1ea9e32e_renaming_table_with_account.py  defae579ae42_init_db.py
infrastructure/repositories/: accounts.py  categories.py  db_models.py  subcategories.py  users.py  users_repository.py
models/: accounts.py  auth.py  category.py  enums.py
routers/: accounts.py  auth.py  categories.py  subcategories.py  system_routes.py  users.py
services/: account_service.py  auth_service.py  categories.py  subcategories.py  user_service.py
utils/: custom_exception.py  exception.py  exception_handler.py  jwt_parser.py  status_code_message_mapper.py
utils/exceptions/: accounts_exception.py  category_exception.py  user_exception.py
