[tool.poetry]
name = "corsar-wallet"
version = "0.1.0"
description = ""
authors = ["Ivan Piankov <vanypyankov@gmail.com>"]
readme = "README.md"
packages = [{include = "corsar_wallet"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
alembic = "^1.9.2"
environs = "^9.5.0"
inject = "^4.3.1"
uvicorn = "^0.20.0"
orjson = "^3.8.5"
sqlalchemy = "^2.0.0"
sqlalchemy2-stubs = "^0.0.2a32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
